--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         });
         
         message += `%0A----------------------------%0A`;
-        message += `Northern Goods Carrier Mobile App`;
+        message += `VARANASI DEPOT`;
         
         window.open(`https://wa.me/?text=${message}`, '_blank');
     }
