--- a/index.html
+++ b/index.html
@@ -133,5 +133,6 @@
     }
     init();
 </script>
-</body>
-</html>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js');
+}
